fix(safe-apps): Use classes for dark mode (#792)

--- a/src/components/safe-apps/SafeAppsErrorBoundary/styles.module.css
+++ b/src/components/safe-apps/SafeAppsErrorBoundary/styles.module.css
@@ -38,4 +38,6 @@
 .image {
   margin-top: 15px;
   margin-bottom: 15px;
+  width: 64px;
+  height: 64px;
 }
